media/error_tc/error_270.txt
G:\SEM-7\ADF\FINAL PROJECT\AlgoBooth\media\source_codes/code_5B2rym5.cpp: In function 'int main()':
G:\SEM-7\ADF\FINAL PROJECT\AlgoBooth\media\source_codes/code_5B2rym5.cpp:8:1: error: expected ';' before '}' token
 }
 ^
